--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       NEO4JLABS_PLUGINS: "[\"apoc\",\"graph-data-science\"]"
       NEO4J_dbms_memory_pagecache_size: "8G"
       NEO4J_dbms_memory_heap_max__size: "8G"
-    image: library/neo4j:4.0.4
+    image: neo4j:4.0.4
     networks:
       - mcs
     ports:
