--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   benchmark-app-docker:
     docker:
       - image: circleci/python:3.8
+        auth:
+          username: $DOCKER_ID
+          password: $DOCKER_PASSWORD
     steps:
       - checkout
       - setup_remote_docker
@@ -27,6 +30,9 @@ jobs:
   benchmark-app-scala:
     docker:
       - image: circleci/openjdk:11
+        auth:
+          username: $DOCKER_ID
+          password: $DOCKER_PASSWORD
     steps:
       - attach_workspace:
           at: /tmp/workspace
@@ -59,6 +65,9 @@ jobs:
   kg-app-docker:
     docker:
       - image: circleci/python:3.8
+        auth:
+          username: $DOCKER_ID
+          password: $DOCKER_PASSWORD
     steps:
       - checkout
       - setup_remote_docker
@@ -83,7 +92,13 @@ jobs:
   kg-app-scala:
     docker:
       - image: circleci/openjdk:11
+        auth:
+          username: $DOCKER_ID
+          password: $DOCKER_PASSWORD
       - image: neo4j:4.0.4
+        auth:
+          username: $DOCKER_ID
+          password: $DOCKER_PASSWORD
         name: mcs-neo4j
         environment:
           NEO4J_AUTH: neo4j/nC1aB4mji623s2Zs
@@ -118,9 +133,11 @@ jobs:
             - "~/.m2"
             - "~/.sbt"
   ts:
-    working_directory: ~/project
     docker:
       - image: circleci/node:12
+        auth:
+          username: $DOCKER_ID
+          password: $DOCKER_PASSWORD
     steps:
       - checkout
       - restore_cache:
