--- a/app/kg/conf/application.conf
+++ b/app/kg/conf/application.conf
@@ -12,5 +12,5 @@ play.modules.enabled += "stores.KgStoresModule"
 slick.dbs.default.db.driver = "org.postgresql.Driver"
 slick.dbs.default.db.password = "7EAdu7jJvZNxxrNZ"
 slick.dbs.default.db.user = "mcs"
-slick.dbs.default.db.url = "postgres://mcs-postgres:5432/kg"
+slick.dbs.default.db.url = "jdbc:postgresql://mcs-postgres:5432/kg"
 slick.dbs.default.profile = "slick.jdbc.PostgresProfile$"
