An attempt at postgres store config. error exists on PostgresKgCommandStore and PostgresKgQueryStore.

--- a/app/kg/conf/application.conf
+++ b/app/kg/conf/application.conf
@@ -9,8 +9,11 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 play.modules.enabled += "stores.KgStoresModule"
-slick.dbs.default.db.driver = "org.postgresql.Driver"
-slick.dbs.default.db.password = "7EAdu7jJvZNxxrNZ"
-slick.dbs.default.db.user = "mcs"
-slick.dbs.default.db.url = "jdbc:postgresql://mcs-postgres:5432/kg"
-slick.dbs.default.profile = "slick.jdbc.PostgresProfile$"
+postgres.connectionPool = "HikariCP"
+postgres.dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+postgres.profile = "slick.jdbc.PostgresProfile$"
+postgres.properties.driver = "org.postgresql.Driver"
+postgres.properties.password = "7EAdu7jJvZNxxrNZ"
+postgres.properties.url = "jdbc:postgresql://mcs-postgres:5432/kg"
+postgres.properties.user = "mcs"
+
