Fix postgres config

--- a/app/kg/conf/application.conf
+++ b/app/kg/conf/application.conf
@@ -9,11 +9,10 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 play.modules.enabled += "stores.KgStoresModule"
-postgres.connectionPool = "HikariCP"
-postgres.dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
 postgres.profile = "slick.jdbc.PostgresProfile$"
-postgres.properties.driver = "org.postgresql.Driver"
-postgres.properties.password = "7EAdu7jJvZNxxrNZ"
-postgres.properties.url = "jdbc:postgresql://mcs-postgres:5432/kg"
-postgres.properties.user = "mcs"
+postgres.db.connectionPool = "HikariCP"
+postgres.db.driver = "org.postgresql.Driver"
+postgres.db.password = "7EAdu7jJvZNxxrNZ"
+postgres.db.url = "jdbc:postgresql://mcs-postgres:5432/kg"
+postgres.db.user = "mcs"
 
