--- a/integration/package.json
+++ b/integration/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@tetherless-world/twxplore-base": "1.0.11",
+    "@tetherless-world/twxplore-base": "1.0.13",
     "cross-env": "7.0.2",
-    "cypress": "4.11.0",
-    "cypress-intellij-reporter": "0.0.4",
-    "typescript": "3.9.5"
+    "cypress": "4.12.1",
+    "cypress-intellij-reporter": "^0.0.5",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@types/node": "^14.0.5"
