--- a/gui/package.json
+++ b/gui/package.json
@@ -34,7 +34,7 @@
     "ts-loader": "^8.0.4",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3",
+    "typescript": "4.0.5",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
