--- a/integration/package.json
+++ b/integration/package.json
@@ -14,7 +14,7 @@
     "cross-env": "7.0.2",
     "cypress": "4.12.1",
     "cypress-intellij-reporter": "^0.0.5",
-    "typescript": "^4.0.5"
+    "typescript": "4.0.5"
   },
   "dependencies": {
     "@types/node": "^14.0.5"
